--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,13 +8,12 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=cyrillic"
     rel="stylesheet">
-  <title>frontend</title>
+  <title>Система контроля рекламы</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+    <strong>Извините, но сайт не работает без javascript. Включите его.</strong>
   </noscript>
   <div id="app"></div>
 </body>
