--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=cyrillic"
-    rel="stylesheet">
-  <title>Система контроля рекламы</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+    <title>Система контроля рекламы</title>
 </head>
 
 <body>
-  <noscript>
+    <noscript>
     <strong>Извините, но сайт не работает без javascript. Включите его.</strong>
   </noscript>
-  <div id="app"></div>
+    <div id="app"></div>
 </body>
 
 </html>
